Correction de la position de la flèche dans le header en version mobile

--- a/css/acceuil.css
+++ b/css/acceuil.css
@@ -410,9 +410,9 @@ header {
   position: relative;
   text-align: center;
 }
-header i {
+header a {
   position: absolute;
-  left: 255px;
+  left: 33px;
   width: 10%;
   font-size: 1.5em;
 }
@@ -423,6 +423,9 @@ header h1 {
   header {
     height: 32px;
     padding: 16px;
+  }
+  header a {
+    left: 255px;
   }
 }
 
